Figuring out front-end stuff, seeds works

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,9 @@
+<p><%= @whole_urls %></p>
+
+
 <div class="container">
   <h1>Welcome to Sinatra!</h1>
-  <p>Hello, world!</p>
+  <p>Print this mother fucker <%= @whole_urls %></p>
 
   <table>
     <tr>
